@@ -78,7 +78,6 @@ static void _free_all_partitions (partition_info_msg_t *msg);
 static void  _free_all_reservations(reserve_info_msg_t *msg);
 
 static void _free_all_step_info (job_step_info_response_msg_t *msg);
-static void _make_lower(char *change);
 
 /*
  * slurm_msg_t_init - initialize a slurm message
@@ -211,7 +210,7 @@ extern int slurm_addto_char_list(List char_list, char *names)
 				else
 					count++;
 
-				_make_lower(name);
+				xstrtolower(name);
 				list_append(char_list, name);
 
 				list_iterator_reset(itr);
@@ -245,7 +244,7 @@ extern int slurm_addto_char_list(List char_list, char *names)
 		else
 			count++;
 
-		_make_lower(name);
+		xstrtolower(name);
 		list_append(char_list, name);
 	}
 	list_iterator_destroy(itr);
@@ -2228,20 +2227,6 @@ void inline slurm_free_job_notify_msg(job_notify_msg_t * msg)
 	if (msg) {
 		xfree(msg->message);
 		xfree(msg);
-	}
-}
-
-/* make everything lowercase should not be called on static char *'s */
-static void _make_lower(char *change)
-{
-	if(change) {
-		int j = 0;
-		while(change[j]) {
-			char lower = tolower(change[j]);
-			if(lower != change[j])
-				change[j] = lower;
-			j++;
-		}
 	}
 }
 
