@@ -87,6 +87,7 @@ strong_alias(_xstrsubstitute,   slurm_xstrsubstitute);
 strong_alias(xstrstrip,         slurm_xstrstrip);
 strong_alias(xshort_hostname,   slurm_xshort_hostname);
 strong_alias(xstring_is_whitespace, slurm_xstring_is_whitespace);
+strong_alias(xstrtolower, slurm_xstrtolower);
 
 /*
  * Ensure that a string has enough space to add 'needed' characters.
@@ -501,3 +502,16 @@ bool xstring_is_whitespace(const char *str)
 	return true;
 }
 
+/*
+ * If str make everything lowercase.  Should not be called on static char *'s
+ */
+void xstrtolower(char *str)
+{
+	if(str) {
+		int j = 0;
+		while(str[j]) {
+			str[j] = tolower(str[j]);
+			j++;
+		}
+	}
+}
